<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5F8E7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/bevan"
        android:text="@string/your_progress"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#6C6A6A"
        android:fontFamily="@font/baumans"
        android:text="@string/education_is_what_remains_after_one_has_forgotten_what_one_has_learned_in_school"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_header" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baumans"
        android:text="@string/albert_einstein"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="246dp"
        android:layout_height="238dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_global_education"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author" />


    <!--            <TextView-->

    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->

    <!--                android:layout_marginTop="10dp"-->
    <!--                android:text="25 Questions"-->
    <!--                android:textAlignment="center"-->
    <!--                android:textSize="10sp"-->
    <!--                app:layout_constraintEnd_toEndOf="parent"-->
    <!--                app:layout_constraintHorizontal_bias="0.495"-->
    <!--                app:layout_constraintLeft_toLeftOf="parent"-->
    <!--                app:layout_constraintRight_toRightOf="parent"-->
    <!--                app:layout_constraintStart_toStartOf="parent"-->
    <!--                app:layout_constraintTop_toBottomOf="@+id/title" />-->


    <androidx.cardview.widget.CardView
        android:id="@+id/button_one"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:gravity="center"
        app:cardBackgroundColor="#F6CE07"
        android:orientation="vertical"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_two">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baumans"
                android:text="24"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baumans"
                android:text="Question\nLeft"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_two"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        app:cardBackgroundColor="#F68800"

        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/main_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baumans"
                android:text="26"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baumans"
                android:text="Question\nAttempted"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_three"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="#F62C08"

        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        android:gravity="center"


        app:layout_constraintBottom_toBottomOf="@+id/button_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_two">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baumans"
                android:text="10"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baumans"
                android:text="Flaged\nQuestions"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_next"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/curved_view"
        android:fontFamily="@font/baumans"
        android:text="@string/next"
        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_three"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_view"
        android:fontFamily="@font/baumans"
        android:layout_marginRight="25dp"
        android:text="@string/previous"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="@+id/button_two"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="@+id/button_one" />


</androidx.constraintlayout.widget.ConstraintLayout>